zope.exceptions Changelog
=========================

4.0.3 (unreleased)
------------------

- TBD

4.0.2 (2012-11-21)
------------------

- Test Python 3.3 support under tox.

4.0.1 (2012-08-20)
------------------

- Fixed optional dependency code for `zope.security` to work under Python 3.3.


4.0.0.1 (2012-05-16)
--------------------

- Fixed rendering of package docs on PyPI.


4.0.0 (2012-05-16)
------------------

- Automated build of Sphinx HTML docs and running doctest snippets via tox.

- Added Sphinx documentation.

- Added support for continuous integration using ``tox`` and ``jenkins``.

- Removed use of '2to3' and associated fixers when installing under Py3k.
  The code is now in a "compatible subset" which supports Python 2.6, 2.7,
  and 3.2, including PyPy 1.8 (the version compatible with the 2.7 language
  spec).

- 100% unit test coverage.

- Dropped explicit support for Python 2.4 / 2.5 / 3.1.

- Added 'setup.py dev' alias (runs ``setup.py develop`` plus installs
  ``nose`` and ``coverage``).

- Added 'setup.py docs' alias (installs ``Sphinx`` and dependencies).


3.7.1 (2012-03-28)
------------------

- Fix: missed to reverse extractStack entries


3.7.0 (2012-03-28)
------------------

- Added TextExceptionFormatter.extractStack and extract_stack


3.6.2 (2012-03-28)
------------------

- Fallback to traceback.format_tb when the formatter is called recursively.
  i.e. Don't let errors in the formatter pass silently.

- Fix deprecated unittest functions: ``assert_`` and ``assertEquals``.

3.6.1 (2010-07-06)
------------------

- Fixed tests to work under Python 2.7.

- PEP8 cleanup and removed obsolete build infrastructure files.


3.6.0 (2010-05-02)
------------------

- Added support to bootstrap on Jython.

- Added Python 3 support.

- The dependency on zope.testing seemed spurious, possibly a rest of a real
  dependency that is gone now. I removed it.


3.5.2 (2008-04-30)
------------------

- Updated CHANGES.txt.


3.5.1 (2008-04-28)