@@ -4,12 +4,15 @@ zope.exceptions Changelog
 4.0.3 (unreleased)
 ------------------
 
-- TBD
+- Fixed format_exception(..., as_html=True) not to HTML-escape the '<br />'
+  it adds to the exception value.
+
 
 4.0.2 (2012-11-21)
 ------------------
 
 - Test Python 3.3 support under tox.
+
 
 4.0.1 (2012-08-20)
 ------------------
